<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EAAV</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="LblParametros">Parametros</string>
    <string name="title_activity_parametros">Parametros</string>
    <string name="title_activity_notificacion">Notificacion</string>
    <string name="LblParamServidor">IP Servidor</string>
    <string name="LblParamPuerto">Puerto</string>
    <string name="LblParamServicio">Servicio</string>
    <string name="BtnParamGuardar">Guardar Parametros</string>
    <string name="title_activity_lista_trabajo">Lista_trabajo</string>
    <string name="LblAllRevision">Revision</string>
    <string name="LblAllLectura">Lectura Encontrada</string>
    <string name="LblAllCodigo">Codigo</string>
    <string name="LblAllNombre">Nombre</string>
    <string name="LblAllDireccion">Direccion</string>
    <string name="LblAllSerie">Serie</string>
    <string name="LblAllMarca">Marca</string>
    <string name="LblAllCiclo">Ciclo</string>
    <string name="LblAllPromedio">Promedio</string>
    <string name="LblAllRuta">Ruta</string>
    <string name="LblAllVisita">Visita Realizada</string>
    <string name="LblAllLectura1">Lectura 1</string>
    <string name="LblAllNovedad1">Novedad 1</string>
    <string name="LblAllLectura2">Lectura 2</string>
    <string name="LblAllNovedad2">Novedad 2</string>
    <string name="LblAllSolicitudes">Solicitudes</string>
    <string name="LblNotificacionLectura">Lectura</string>
    <string name="LblNotificacionMedidor">Medidor</string>
    <string name="LblNotificacionPrecinto">Precinto</string>
    <string name="LblNotificacionObservacion">Observacion</string>
    <string name="LblNotificacionMotivo">Motivo</string>
    <string name="LblNotificacionJornada">Jornada</string>
    <string name="LblNotificacionRevision">Revision</string>
    <string name="LblNotificacionCodigo">Codigo</string>
    <string name="LblNotificacionNombre">Nombre</string>
    <string name="LblNotificacionSerie">Serie</string>
    <string name="LblNotificacionCiclo">Ciclo</string>
    <string name="LblNotificacionVisita">Visita</string>
    <string name="LblNotificacionUso">Uso</string>
    <string name="title_activity_desviacion">Desviacion</string>
    <string name="LblDesviacionEstrato">Estrato</string>
    <string name="LblDesviacionPrecinto">Precinto</string>
    <string name="LblDesviacionTipo">Tipo</string>
    <string name="LblDesviacionAcueducto">Servicio Acueducto</string>
    <string name="LblDesviacionAlcantarrillado">Servicio Alcantarillado</string>
    <string name="LblDesviacionOtros">Otros</string>
    <string name="LblDesviacionArea">Area</string>
    <string name="LblDesviacionPisos">Pisos</string>
    <string name="LblDesviacionPersonas">N° Personas Residentes</string>
    <string name="LblDesviacionEstado">Estado</string>
    <string name="LblDesviacionHabitado">Habitado Por</string>
    <string name="LblDesviacionVisita">Visita Actual</string>
    <string name="LblDesviacionCual">Cual</string>
    <string name="LblDesviacionCaracteristicasActividad">Actividad Economica</string>
    <string name="LblDesviacionNombreUsuario">Usuario</string>
    <string name="LblDesviacionCedulaUsuario">Cedula Usuario</string>
    <string name="LblDesviacionNombreTestigo">Testigo</string>
    <string name="LblDesviacionCedulaTestigo">Cedula Testigo</string>
    <string name="LblParamImpresora">Impresora</string>
    <string name="LblParametrosTecnico">Nombre Tecnico</string>
    <string name="LblParametrosCedula">Cedula Tecnico</string>
    <string name="BtnNotificacionFecha">Cambiar Fecha de Notificacion</string>
    <string name="LblNotificacionFecha">Fecha de Notificacion</string>
    <string name="BtnNotificacionObservacion">Incluir Observacion Sistema</string>
    <string name="LblParametrosWS">Web Service</string>
    <string name="LblDesviacionRevision">Revision</string>
    <string name="LblDesviacionNombre">Nombre</string>
    <string name="LblDesviacionCodigo">Codigo</string>
    <string name="LblDesviacionDireccion">Direccion</string>
    <string name="LblDesviacionSerie">Serie</string>
    <string name="LblDesviacionCiclo">Ciclo</string>
    <string name="LblDesviacionPromedio">Promedio</string>
    <string name="LblDesviacionUso">Uso</string>
    <string name="LblDesviacionActividad">Actividad</string>
    <string name="LblInfTecnicaAcueducto">Acueducto</string>
    <string name="TituloInfTecnicaIndividual">DATOS MEDIDOR DEL CLIENTE</string>
    <string name="LblInfTecnicaCual">Cual</string>
    <string name="LblInfTecnicaCamaraMedidor">Camara Medidor</string>
    <string name="LblInfTecnicaEstado">Estado</string>
    <string name="LblInfTecnicaEscape">Escape</string>
    <string name="LblInfTecnicaNumero">Numero</string>
    <string name="LblInfTecnicaMarca">Marca</string>
    <string name="LblInfTecnicaLecturaIndividual">Lectura</string>
    <string name="LblInfTecnicaDiametroIndividual">Diametro</string>
    <string name="LblInfTecnicaBypass">Bypass</string>
    <string name="LblInfTecnicaServicioDirecto">Servicio Directo</string>
    <string name="TituloInfTecnicaTotalizador">DATOS DEL TOTALIZADOR</string>
    <string name="TituloInfTecnicaDiagnostico">DIAGNOSTICO TECNICO</string>
    <string name="BtnInfTecnicaObservacion">Incluir Observacion</string>
    <string name="LblInfTecnicaSegundoConcepto">Segundo Concepto</string>
    <string name="LblInfTecnicaRespuesta">Respuesta</string>
    <string name="LblInfTecnicaObservacion">Observacion</string>
    <string name="LblVisitaTecnicaSubterraneos">Subterraneos</string>
    <string name="LblVisitaTecnicaElemento">Elemento</string>
    <string name="LblVisitaTecnicaCantidad">Cantidad</string>
    <string name="LblVisitaTecnicaItem1">Item1</string>
    <string name="LblVisitaTecnicaItem2">Item2</string>
    <string name="LblVisitaTecnicaItem3">Item3</string>
    <string name="LblVisitaTecnicaOtro">Otro</string>
    <string name="BtnVisitaTecnicaGuardarElementos">Guardas Cambios Elementos</string>
    <string name="LblVisitaTecnicaRegistroPaso">Registro Paso</string>
    <string name="LblVisitaTecnicaRegistroAntifraude">Registro Antifraude</string>
    <string name="LblVisitaTecnicaDestruido">Destruido</string>
    <string name="LblVisitaTecnicaInvertido">Invertido</string>
    <string name="LblVisitaTecnicaVidrioIlegible">Vidrio Ilegible</string>
    <string name="LblVisitaTecnicaPrecintoSeguridad">Precinto Seguridad Roto</string>
    <string name="BtnVisitaTecnicaInstalaciones">Guardar</string>
    <string name="TituloVisitaTecnicaPruebasEstanqueidad">Resultados de Pruebas de Estanqueidad</string>
    <string name="LblVisitaTecnicaElementoPrueba">Tanque</string>
    <string name="LblVisitaTecnicaResultado">Resultado</string>
    <string name="LblVisitaTecnicaCapacidad">Capacidad</string>
    <string name="LblVisitaTecnicaFuga">Fuga de</string>
    <string name="BtnVisitaTecnicaPruebaEstanqueidad">Guardar Prueba Estanqueidad</string>
    <string name="BtnGuardarInfTecnica">Guardar</string>
    <string name="BtnGuardarInfgeneral">Guardar Informacion General</string>
    <string name="BtnGuardarDatosMedidor">Guardar Datos del Medidor</string>
    <string name="LblListaTrabajoRevision">Revision</string>
    <string name="LblListaTrabajoLectura">Lectura</string>
    <string name="LblListaTrabajoCodigo">Codigo</string>
    <string name="LblListaTrabajoSerie">Serie</string>
    <string name="LblListaTrabajoNombre">Nombre</string>
    <string name="LblListaTrabajoDireccion">Direccion</string>
    <string name="LblListraTrabajoMarca">Marca</string>
    <string name="LblListaTrabajoCiclo">Ciclo</string>
    <string name="LblListaTrabajoRuta">Ruta</string>
    <string name="LblListaTrabajoPromedio">Promedio</string>
    <string name="LblListaTrabajoVisitaRealizada">Visita Realizada</string>
    <string name="LblListaTrabajoLectura1">Lectura 1</string>
    <string name="LblListaTrabajoNovedad1">Novedad 1</string>
    <string name="LblListaTrabajoLectura2">Lectura 2</string>
    <string name="LblListaTrabajoNovedad2">Novedad 2</string>
    <string name="LblAperturaRevision">N° Revision</string>
    <string name="LblAperturaCodigo">Codigo de Apertura</string>
    <string name="BtnAperturaAbrirRevision">Abrir Revision</string>
    <string name="title_activity_dialogo_simple">DialogoSimple</string>
    <string name="ds_btn_cancelar">Cancelar</string>
    <string name="ds_lbl_titulo">TITULO</string>
    <string name="ds_lbl_text1">Texto</string>
    <string name="ds_btn_aceptar">Aceptar</string>
    <string name="title_activity_modal_inf_general">INFORMACION GENERAL</string>
    <string name="title_activity_modal_input_single"></string>
    <string name="title_activity_modal_informacion">ModalInformacion</string>
    <string name="title_activity_modal_date">SELECCIONE FECHA</string>
    <string name="title_activity_modal_confirmacion">Confirmacion</string>
    <string name="title_activity_modal_input_double">Modal_input_double</string>
    <string name="no_archivos"></string>

</resources>
