<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:padding="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/ds_lbl_titulo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"
        android:text="@string/ds_lbl_titulo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
		android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal"
	    android:weightSum="10">
	    
        <TextView
	        android:id="@+id/ds_lbl_text1"
	        android:layout_width="0dp"
	        android:layout_weight="4"
	        android:layout_height="match_parent"
	        android:text="@string/ds_lbl_text1"
	        android:gravity="end|center_vertical"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
   		
        <EditText
	        android:id="@+id/ds_txt_text1"
	        android:layout_width="0dp"
	        android:layout_weight="6"
	        android:layout_height="match_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:inputType="text" />   	
   	</LinearLayout>     
    
    <LinearLayout
		android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal|center_vertical"
	    android:weightSum="10">
        
       <Button
	        android:id="@+id/ds_btn_aceptar"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="4"
	        android:text="@string/ds_btn_aceptar" />
       
        <Button
	        android:id="@+id/ds_btn_cancelar"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="4"
	        android:text="@string/ds_btn_cancelar" />
	
	    
    </LinearLayout>    
</LinearLayout>
