<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Lista_trabajo" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/LstViewSolicitudes"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/LblListraTrabajoSolicitud"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TxtListaTrabajoRevision"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoRevision"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/TxtListaTrabajoRevision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/LblListraTrabajoSolicitud"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/TxtListaTrabajoCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TxtListaTrabajoRevision"
                android:layout_alignRight="@+id/TxtListaTrabajoRevision"
                android:layout_below="@+id/TxtListaTrabajoRevision"
                android:inputType="number" />

            <TextView
                android:id="@+id/LblListaTrabajoCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TxtListaTrabajoCodigo"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/LblListraTrabajoSolicitud"
                android:layout_below="@+id/LblListraTrabajoSolicitud"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoCodigo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/LblListaTrabajoLectura"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/TxtListaTrabajoCodigo"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="22dp"
                android:layout_toRightOf="@+id/TxtListaTrabajoRevision"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoLectura"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/TxtListaTrabajoLectura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/TxtListaTrabajoCodigo"
                android:layout_toRightOf="@+id/LblListaTrabajoLectura"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/TxtListaTrabajoSerie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TxtListaTrabajoLectura"
                android:layout_below="@+id/TxtListaTrabajoLectura"
                android:ems="10"
                android:inputType="text" />

            <EditText
                android:id="@+id/TxtListaTrabajoNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TxtListaTrabajoCodigo"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/TxtListaTrabajoCodigo"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/LblListaTrabajoNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TxtListaTrabajoNombre"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/LblListaTrabajoCodigo"
                android:layout_below="@+id/TxtListaTrabajoCodigo"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoNombre"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/TxtListaTrabajoDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TxtListaTrabajoNombre"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/TxtListaTrabajoNombre"
                android:ems="10"
                android:inputType="number|text" />

            <TextView
                android:id="@+id/LblListaTrabajoDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TxtListaTrabajoDireccion"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/LblListaTrabajoNombre"
                android:layout_below="@+id/TxtListaTrabajoNombre"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoDireccion"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/TxtListaTrabajoMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TxtListaTrabajoDireccion"
                android:layout_below="@+id/TxtListaTrabajoDireccion"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/LblListaTrabajoMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/LblListaTrabajoRuta"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/TxtListaTrabajoDireccion"
                android:layout_toLeftOf="@+id/TxtListaTrabajoMarca"
                android:gravity="center_vertical"
                android:text="@string/LblListraTrabajoMarca"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/TxtListaTrabajoCiclo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/TxtListaTrabajoMarca"
                android:layout_alignBottom="@+id/TxtListaTrabajoMarca"
                android:layout_alignLeft="@+id/TxtListaTrabajoSerie"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/LblLIstraTrabajoCiclo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TxtListaTrabajoCiclo"
                android:layout_alignLeft="@+id/LblListaTrabajoSerie"
                android:layout_alignRight="@+id/LblListaTrabajoLectura"
                android:layout_alignTop="@+id/TxtListaTrabajoCiclo"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoCiclo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/TxtListaTrabajoRuta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TxtListaTrabajoMarca"
                android:layout_toRightOf="@+id/LblListaTrabajoMarca"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/TxtListaTrabajoPromedio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/TxtListaTrabajoRuta"
                android:layout_alignBottom="@+id/TxtListaTrabajoRuta"
                android:layout_toRightOf="@+id/LblLIstraTrabajoCiclo"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/LblListaTrabajoRuta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TxtListaTrabajoRuta"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/LblListaTrabajoMarca"
                android:layout_alignTop="@+id/TxtListaTrabajoRuta"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoRuta"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/LblListaTrabajoPromedio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TxtListaTrabajoPromedio"
                android:layout_alignLeft="@+id/LblLIstraTrabajoCiclo"
                android:layout_alignRight="@+id/LblLIstraTrabajoCiclo"
                android:layout_below="@+id/TxtListaTrabajoCiclo"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoPromedio"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/TxtListaTrabajoVisitaRealizada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/TxtListaTrabajoMarca"
                android:layout_below="@+id/TxtListaTrabajoRuta"
                android:layout_toRightOf="@+id/LblListaTrabajoVisitaRealizada"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/LblListaTrabajoVisitaRealizada"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TxtListaTrabajoVisitaRealizada"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/TxtListaTrabajoVisitaRealizada"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoVisitaRealizada"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/TxtListaTrabajoLectura1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TxtListaTrabajoRuta"
                android:layout_below="@+id/TxtListaTrabajoVisitaRealizada"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/LblListaTrabajoLectura1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TxtListaTrabajoLectura1"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/LblListaTrabajoRuta"
                android:layout_below="@+id/LblListaTrabajoVisitaRealizada"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoLectura1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/LblListaTrabajoNovedad1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TxtListaTrabajoLectura1"
                android:layout_alignLeft="@+id/LblListaTrabajoPromedio"
                android:layout_below="@+id/TxtListaTrabajoVisitaRealizada"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoNovedad1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/TxtListaTrabajoNovedad1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TxtListaTrabajoPromedio"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/LblListaTrabajoNovedad1"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/TxtListaTrabajoLectura2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TxtListaTrabajoLectura1"
                android:layout_below="@+id/TxtListaTrabajoLectura1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/LblListaTrabajoLectura2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TxtListaTrabajoLectura2"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/TxtListaTrabajoLectura1"
                android:layout_toLeftOf="@+id/TxtListaTrabajoLectura2"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoLectura2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/TxtListaTrabajoNovedad2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/TxtListaTrabajoLectura2"
                android:layout_alignBottom="@+id/TxtListaTrabajoLectura2"
                android:layout_alignLeft="@+id/TxtListaTrabajoNovedad1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/LblListaTrabajoNovedad2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TxtListaTrabajoNovedad2"
                android:layout_alignLeft="@+id/LblListaTrabajoNovedad1"
                android:layout_below="@+id/LblListaTrabajoNovedad1"
                android:gravity="center_vertical"
                android:scrollHorizontally="false"
                android:text="@string/LblListaTrabajoNovedad2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/LblListaTrabajoSerie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/TxtListaTrabajoNombre"
                android:layout_alignLeft="@+id/LblListaTrabajoLectura"
                android:layout_alignRight="@+id/LblListaTrabajoLectura"
                android:layout_below="@+id/LblListaTrabajoLectura"
                android:gravity="center_vertical"
                android:text="@string/LblListaTrabajoSerie"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/LstViewSolicitudes"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LblListaTrabajoSolicitudes"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/LblListaTrabajoSolicitudes" >
    </ListView>

    <TextView
        android:id="@+id/LblListaTrabajoSolicitudes"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/LblAllSolicitudes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>